backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: flaskbackend
                port:
                  number: 80
